Correcting Lab 6